image clip, button marquee and some utils

--- a/index.html
+++ b/index.html
@@ -32,30 +32,41 @@
     <div class="productSlider">
         <div class="productSlider__title">
             <h1>SEASONAL</h1>
-            <h2>FEATURED</h2>
+            <h2>FEATURED
+                <button>
+                    <span class="content">
+                      <span data-text="EXPLORE MORE" class="font-utility">
+                        EXPLORE MORE
+                      </span>
+                    </span>
+                </button>
+            </h2>
             <h1>ITEMS</h1>
         </div>
         <div class="productSlider__items">
 
             <div class="productSlider__item">
-                <img src="./assets/image/Seasonal Item/b-3.png" />
+                <img src="./assets/image/Seasonal Item/item1.png" />
                 <p class='font-body1'>CLASSIC JACKET</p>
             </div>
 
             <div class="productSlider__item">
-                <img src="./assets/image/Seasonal Item/b-3.png" />
+                <img src="./assets/image/Seasonal Item/item2.png" />
                 <p class='font-body1'>CLASSIC JACKET</p>
             </div>
 
             <div class="productSlider__item">
-                <img src="./assets/image/Seasonal Item/b-3.png" />
+                <img src="./assets/image/Seasonal Item/item3.png" />
                 <p class='font-body1'>CLASSIC JACKET</p>
             </div>
         </div>
     </div>
 
     <div class="marquee">
-        <h1>NATURE. ELEGANT. CLASSIC</h1>
+        <h1>NATURE. ELEGANT. CLASSIC &bull;
+            <img src="./assets/image/marqueeImg.png" />
+            &bull; NATURE. ELEGANT. CLASSIC
+        </h1>
     </div>
 
     <div class="collections">
@@ -63,6 +74,12 @@
             <div class="collections__content">
                 <h3>FW2020。</h3>
                 <h4>BLACK COLLECTION</h4>
+                <div class="collections__button collections__button-prev disable">
+                    <span class="font-utility">PREVIOUS</span>
+                </div>
+                <div class="collections__button collections__button-next">
+                    <span class="font-utility">NEXT</span>
+                </div>
             </div>
             <div class="collections__mainImg"></div>
         </div>
@@ -80,6 +97,6 @@
         <img src='./assets/logo.png' class="footer__logo"/>
         <span class="footer__copyright font-body2">souL@2020 copyright</span>
     </footer>
-
+    
 </body>
 </html>
