--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Oswald:wght@600&display=swap" rel="stylesheet">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.min.js" integrity="sha512-n8IpKWzDnBOcBhRlHirMZOUvEq2bLRMuJGjuVqbzUJwtTsgwOgK5aS0c1JA647XWYfqvXve8k3PtZdzpipFjgg==" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
+
     <link rel="stylesheet" href="./css/global.css"/>
     <link rel="stylesheet" href="./css/index.css"/>
 </head>
@@ -106,6 +109,7 @@
         <h1>NATURE. ELEGANT. CLASSIC &bull;
             <img src="./assets/image/marqueeImg.png" />
             &bull; NATURE. ELEGANT. CLASSIC
+            &bull; NATURE. ELEGANT. CLASSIC
         </h1>
     </div>
 
@@ -132,27 +136,33 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <h3>FW2021 &bull;</h3>
-                                <h4>BLACK COLLECTION</h4>
+                                <h4 class="desktop">BLACK COLLECTION</h4>
+                                <h4 class='mobile'>BLACK<br/>COLLECTION</h4>
                             </div>
                             <div class="swiper-slide">
                                 <h3>FW2022 &bull;</h3>
-                                <h4>GREY COLLECTION</h4>
+                                <h4 class="desktop">GREY COLLECTION</h4>
+                                <h4 class="mobile">GREY<br/>COLLECTION</h4>
                             </div>
                             <div class="swiper-slide">
                                 <h3>FW2023 &bull;</h3>
-                                <h4>GREEN COLLECTION</h4>
+                                <h4 class="desktop">GREEN COLLECTION</h4>
+                                <h4 class="mobile">GREEN<br/>COLLECTION</h4>
                             </div>
                             <div class="swiper-slide">
                                 <h3>FW2024 &bull;</h3>
-                                <h4>BLUE COLLECTION</h4>
+                                <h4 class="desktop">BLUE COLLECTION</h4>
+                                <h4 class="mobile">BLUE<br/>COLLECTION</h4>
                             </div>
                             <div class="swiper-slide">
                                 <h3>FW2025 &bull;</h3>
-                                <h4>RED COLLECTION</h4>
+                                <h4 class="desktop">RED COLLECTION</h4>
+                                <h4 class="mobile">RED<br/>COLLECTION</h4>
                             </div>
                             <div class="swiper-slide">
                                 <h3>FW2026 &bull;</h3>
-                                <h4>WHITE COLLECTION</h4>
+                                <h4 class="desktop">WHITE COLLECTION</h4>
+                                <h4 class="mobile">WHITE<br/>COLLECTION</h4>
                             </div>
                         </div>
                     </div>
@@ -172,15 +182,15 @@
         
     </div>
 
-    <div class="modalBlock">
-        <img src="assets/SVG/stone.svg" class="modalBlock__doodle modalBlock__doodle-stone doodle-rotate"/>
-        <img src="assets/SVG/stone.svg" class="modalBlock__doodle modalBlock__doodle-stone doodle-rotate"/>
-        <img src="assets/SVG/stone.svg" class="modalBlock__doodle modalBlock__doodle-stone doodle-rotate"/>
-        <div class="modalBlock__3Dmodal">
-            <!-- <img src="assets/image/footerRock.png" /> -->
+    <div class="modelBlock">
+        <img src="assets/SVG/stone.svg" class="modelBlock__doodle modelBlock__doodle-stone doodle-rotate"/>
+        <img src="assets/SVG/stone.svg" class="modelBlock__doodle modelBlock__doodle-stone doodle-rotate"/>
+        <img src="assets/SVG/stone.svg" class="modelBlock__doodle modelBlock__doodle-stone doodle-rotate"/>
+        <div class="modelBlock__3Dmodel">
+            
         </div>
-        <img src="assets/logo.png" class="modalBlock__logo"/>
-        <h1>NATURE. ELEGANT. CLASSIC NATURE. ELEGANT. CLASSIC</h1>
+        <img src="assets/logo.png" class="modelBlock__logo"/>
+        <h1>NATURE. ELEGANT. CLASSIC NATURE. ELEGANT. CLASSIC NATURE. ELEGANT. CLASSIC NATURE. ELEGANT. CLASSIC</h1>
     </div>
 
     <footer class="footer">
